<resources>
    <string name="app_name">NetNote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item1">Todas las notas</string>
    <string name="item2">Favoritos</string>
    <string name="item3">Compartidos conmigo</string>
    <string name="item4">Papelera</string>

    <!-- Activity Informacion -->
    <string name="informacion_bienvenido_text">¡Bienvenido!</string>
    <string name="informacion_text">Netnote te ayuda a organizar tus notas de clase, reuniones y conferencias, añadiendo nuevas caracteristicas:</string>
    <string name="informacion_bienvenida_button">¡Vamos!</string>

    <!-- Activity Main -->
    <string name="main_saltar_button">Saltar</string>
    <string name="main_iniciar_button">Iniciar Sesión</string>
    <string name="main_registrarse_button">Registrarse</string>

    <!-- Activity Iniciar Sesion -->
    <string name="iniciar_titulo_text">Inicio de Sesión</string>
    <string name="iniciar_correo_editText">Correo electrónico</string>
    <string name="iniciar_contrasena_editText">Contraseña</string>
    <string name="iniciar_iniciar_button">Iniciar</string>
    <string name="iniciar_registrarse_button">"¿Necesitas una cuenta?"</string>

    <!-- Activity Registrarse -->
    <string name="registrarse_titulo_text">Crear una Cuenta</string>
    <string name="registrarse_nombre_editText">Nombre</string>
    <string name="registrarse_correo_editText">Correo electrónico</string>
    <string name="registrarse_contrasena_editText">Contraseña</string>
    <string name="registrarse_registrarse_button">Registrarse</string>
    <string name="registrarse_iniciar_button">¿Ya tienes cuenta?</string>
    <string name="registrarse_terminos_text">Al presionar registrarse, acepta todos los términos de servicio y la política de privacidad</string>

    <!-- Errores -->
    <string name="error_ingresarCorreo">Por favor ingrese un correo electrónico</string>
    <string name="error_ingresarCorreoInvalido">Por favor ingrese un correo electrónico valido</string>
    <string name="error_ingresarContrasena">Por favor ingrese una contraseña</string>
    <string name="error_iniciar">Inicio de sesión fallido</string>
    <string name="error_ingresarContrasenaInvalida">La contraseña debe tener como minimo 6 caracteres</string>
    <string name="error_registrarse">Registro fallido. Intentalo nuevamente.</string>
    <string name="error_iniciarNulo"> Inicie Sesión</string>

    <string name="acierto_registrarse">Registro satisfactorio</string>

    <string name="sample_data">Sample data</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="menu_home">Notas</string>
    <string name="menu_share">Compartidos conmigo</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_paper_bin">Papelera</string>

    <!-- Fragments -->
    <string name="fragment_logout_button">Cerrar sesión</string>
    <string name="creditos">Créditos</string>
    <string name="texto">Texto</string>

</resources>