<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/notas"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/compartido"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_paper_bin"
            android:icon="@drawable/papelera"
            android:title="@string/menu_paper_bin" />
        <item
            android:id="@+id/nav_creditos"
            android:icon="@drawable/ic_baseline_priority_high_24"
            android:title="@string/creditos"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout" />

    </group>
</menu>