<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.unicauca.netnote.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.unicauca.netnote.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_paper_bin"
        android:name="com.unicauca.netnote.PaperBinFragment"
        android:label="@string/menu_paper_bin"
        tools:layout="@layout/fragment_paperbin" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.unicauca.netnote.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_creditos"
        android:name="com.unicauca.netnote.CreditosFragment"
        android:label="@string/creditos"
        tools:layout="@layout/fragment_creditos" />
</navigation>