<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">

    <TextView
        android:id="@+id/registrarse_titulo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse_titulo_text"
        android:textColor="#FF5722"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/registrarse_nombre_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <EditText
        android:id="@+id/registrarse_nombre_editText"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/registrarse_nombre_editText"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/registrarse_correo_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registrarse_correo_editText"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/registrarse_correo_editText"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/registrarse_contrasena_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registrarse_contrasena_editText"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registrarse_registrarse_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/registrarse_contrasena_editText"/>

    <Button
        android:id="@+id/registrarse_registrarse_button"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/registrarse_registrarse_button"
        app:layout_constraintBottom_toTopOf="@+id/registrarse_terminos_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registrarse_iniciar_button"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginBottom="132dp"
        android:text="@string/registrarse_iniciar_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registrarse_terminos_text"
        android:layout_width="235dp"
        android:layout_height="34dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/registrarse_terminos_text"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registrarse_iniciar_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


