<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesionActivity">
    <TextView
        android:id="@+id/iniciar_titulo_text"
        android:layout_width="213dp"
        android:layout_height="38dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/iniciar_titulo_text"
        android:textColor="#FF5722"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/iniciar_contrasena_editText"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/iniciar_iniciar_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/iniciar_contrasena_editText"/>

    <Button
        android:id="@+id/iniciar_iniciar_button"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/iniciar_iniciar_button"
        app:layout_constraintBottom_toTopOf="@+id/iniciar_registrarse_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/iniciar_registrarse_button"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginBottom="116dp"
        android:text="@string/iniciar_registrarse_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/iniciar_correo_editText"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/iniciar_contrasena_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciar_titulo_text"
        app:layout_constraintVertical_bias="1.0"
        android:hint="@string/iniciar_correo_editText"/>


</androidx.constraintlayout.widget.ConstraintLayout>

