<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformacionActivity">


    <TextView
        android:id="@+id/informacion_bienvenido_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/informacion_bienvenido_text"
        android:textColor="#FF5722"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/informacion_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/informacion_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/informacion_bienvenido_text"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/informacion_bienvenido_text"
        app:layout_constraintTop_toBottomOf="@id/informacion_bienvenido_text" />


    <ImageView
            android:id="@+id/imagen_audio"
            android:layout_width="64dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/audio"
            app:layout_constraintEnd_toStartOf="@id/info_audio_text"
            app:layout_constraintTop_toTopOf="@id/info_audio_text"
            app:layout_constraintBottom_toBottomOf="@id/info_audio_text"
            app:layout_constraintStart_toStartOf="@id/informacion_text"
            android:layout_marginEnd="15dp"
            />

    <TextView
        android:id="@+id/info_audio_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif"
        android:text="Graba el audio encima de tus notas escritas."
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/informacion_text"
        app:layout_constraintStart_toEndOf="@id/imagen_audio"
        app:layout_constraintTop_toBottomOf="@id/informacion_text" />

    <ImageView
        android:id="@+id/imagen_camara"
        android:layout_width="64dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/imagen_audio"
        app:layout_constraintStart_toStartOf="@+id/imagen_audio"
        app:layout_constraintEnd_toStartOf="@id/info_camara_text"
        app:srcCompat="@drawable/camara" />

    <TextView
        android:id="@+id/info_camara_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="Escanea tus notas físicas y trabaja encima de estas."
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/imagen_camara"
        app:layout_constraintStart_toStartOf="@+id/info_audio_text"
        app:layout_constraintTop_toBottomOf="@id/info_audio_text" />

    <ImageView
        android:id="@+id/imagen_editar"
        android:layout_width="64dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/editar"
        app:layout_constraintTop_toBottomOf="@id/imagen_camara"
        app:layout_constraintStart_toStartOf="@+id/imagen_camara"
        app:layout_constraintEnd_toStartOf="@id/info_editar_text"
        android:layout_marginEnd="15dp"
        />

    <TextView
        android:id="@+id/info_editar_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="Edita tus notas y audios de la forma que quieras."
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/info_camara_text"
        app:layout_constraintStart_toEndOf="@id/imagen_editar"
        app:layout_constraintTop_toBottomOf="@id/info_camara_text" />

    <ImageView
        android:id="@+id/imagen_nube"
        android:layout_width="64dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/info_nube_text"
        app:layout_constraintStart_toStartOf="@+id/imagen_editar"
        app:layout_constraintTop_toBottomOf="@id/imagen_editar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/nube" />

    <TextView
        android:id="@+id/info_nube_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif"
        android:text="Manten todas tus notas en la nube y accede a ellas desde cualquier dispositivo."
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/info_editar_text"
        app:layout_constraintStart_toEndOf="@id/imagen_nube"
        app:layout_constraintTop_toBottomOf="@id/info_editar_text"
        app:layout_constraintVertical_bias="0.014" />

    <Button
        android:id="@+id/informacion_bienvenida_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/informacion_bienvenida_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/info_nube_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/imagen_nube"
        app:layout_constraintTop_toBottomOf="@id/info_nube_text"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>